[package]
name = "RuProGen"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
iced = {version = "0.13.1", features = ["canvas", "tokio", "image","debug"]}
image = {version = "0.25.6", features = ["png"]}
minifb = "0.24"
noise = "0.9.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"]}
tracing-subscriber = "0.3.19"

rand = "0.8"